Feat/57 update spring batch - separate domain and apply executionContext (#221)
* feat: setup prometheus metrics and tag name

* feat: add batch listeners for metric monitoring

* feat: add ExternalApiException for external api error handling

* feat: add ExecutionContextKeys static interface

* chore: remove SkipListner and ChunkListener from LogStepListener

* feat: add FetchTredningKeywords step config

* feat: add SearchNewsStepConfig batch step

* feat: add SearchVideosStepConfig batch step

* feat: refactor batch steps with constants

* chore: update bean name

* chore: rename SearchSources step config

* feat: add EvaluateNoveltyStepConfig batch step

* feat: add NoveltyDeciderConfig

* feat: add generatePost and CachePost step

* feat: add TrendToPost Job Config

* chore: rename evalutateNoveltyStep

* chore: clean executionContext variable and update name

* chore: remove bucketAt batch executionContext